# zuultimate

./: .gitignore  .mailmap  Dockerfile  LICENSING.md  README.md  docker-compose.multiregion.yml  docker-compose.sandbox.yml  docker-compose.workforce.yml  pyproject.toml
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: v3_0_0_global_ops.py
deploy/: docker-compose.vps.yml  redeploy.sh  setup-vps.sh
docs/: PHASE2_IDENTITY_DESIGN.md
docs/adr/: ADR-004-workforce-namespace-isolation.md  ADR-005-zero-trust-not-vpn.md  ADR-006-pop-stateless-proxy.md  ADR-007-entra-federation-not-replacement.md  ADR-008-cross-service-blind-pass.md
docs/api/: openapi.json  openapi.yaml
docs/pricing/: index.html
docs/reliability/: SLO_DEFINITIONS.md  grafana-identity-dashboard.json
scripts/: export_openapi.py  export_public.sh  pre_scale.py  seed_sandbox.py  simulate_cert_revocation.py  simulate_pop_failure.py  validate_multiregion.py  write_readme.py
scripts/mock-pki/: Dockerfile  generate_certs.sh  serve_crl.py
src/pop/: pyproject.toml
src/pop/pop/: __init__.py  app.py  cert_validator.py  config.py  crl_manager.py  metrics.py  proxy.py
src/zuultimate/: app.py  cli.py  deps.py  nexus_client.py
tests/: conftest.py
tests/integration/: conftest.py  test_apikey_router.py  test_auth_flows.py  test_sso_router.py  test_vault_router.py
tests/unit/: test_ab_testing.py  test_account_health.py  test_analytics.py  test_audit_export.py  test_audit_pipeline.py  test_auth_edge_controls.py  test_auth_hardening.py  test_billing_services.py  test_blind_pass.py  test_bloom_filter.py  test_break_glass.py  test_cancel_flow.py  test_config_hardening.py  test_consent.py  test_consent_manager.py  test_cors_manager.py  test_credential_stuffing.py  test_cross_service_binding.py  test_cross_tenant.py  test_data_classifier.py  test_data_residency.py  test_delegated_admin.py  test_directory_integration.py  test_distributed_rate_limiter.py  test_dsar.py  test_dsar_processor.py  test_env_validator.py  test_feature_gate.py  test_free_tier.py  (+53 more)
(+136 files in other folders)
