[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zuultimate"
version = "1.0.0"
description = "Enterprise identity, vault, zero-trust, and AI security platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Chris Arseno" }]
keywords = ["security", "ai-security", "zero-trust", "vault", "identity"]

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0,<3.0",
    "sqlalchemy[asyncio]>=2.0.35,<3.0",
    "aiosqlite>=0.20.0,<1.0",
    "argon2-cffi>=23.1.0,<24.0",
    "cryptography>=43.0.0,<44.0",
    "pyjwt>=2.9.0,<3.0",
    "typer>=0.12.0,<1.0",
    "rich>=13.9.0,<14.0",
    "httpx>=0.27.0,<1.0",
    "alembic>=1.13.0,<2.0",
    "pyotp>=2.9.0,<3.0",
    "authlib>=1.3.0,<2.0",
    "webauthn>=2.0.0,<3.0",
    "prometheus_client>=0.21.0,<1.0",
    "redis[hiredis]>=5.1.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.6.0,<1.0",
    "pyyaml>=6.0.0,<7.0",
]
postgres = ["asyncpg>=0.29.0,<1.0"]

[project.scripts]
zuul = "zuultimate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zuultimate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
